# instructor-ainative

./: .coverage  CLAUDE.md  README.md  pyproject.toml
instructor_ainative/: __init__.py  client.py  models.py  provision.py
instructor_ainative.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py  test_models.py  test_provision.py
