[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instructor-ainative"
version = "0.1.0"
description = "Pre-configured instructor client for structured output extraction via AINative's free LLM API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AINative Studio", email = "dev@ainative.studio"},
]
keywords = [
    "instructor",
    "instructor-plugin",
    "structured-output",
    "pydantic",
    "json-extraction",
    "free-llm",
    "ainative",
    "zerodb",
    "openai-compatible",
    "llama",
    "qwen",
    "deepseek",
    "auto-provisioning",
    "claude",
    "cursor",
    "function-calling",
    "schema-extraction",
    "data-extraction",
    "llm-structured",
    "json-mode",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "instructor>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/instructor-ainative"
Documentation = "https://docs.ainative.studio/instructor"
Repository = "https://github.com/AINative-Studio/instructor-ainative"
Issues = "https://github.com/AINative-Studio/instructor-ainative/issues"

[tool.setuptools.packages.find]
include = ["instructor_ainative*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
